--- a/.luarc.json
+++ b/.luarc.json
@@ -1,14 +1,15 @@
 {
-  "$schema": "https://raw.githubusercontent.com/sumneko/vscode-lua/master/setting/schema.json",
-  "runtime.version": "LuaJIT",
-  "runtime.path": [
-		    "lua/?.lua",
-    "lua/?/init.lua"
-		  ],
-  "workspace.library": [
-		    "/github/workspace/deps/neodev.nvim/types/stable",
-    "${3rd}/busted/library"
-		  ],
-  "diagnostics.libraryFiles": "Disable",
-  "workspace.checkThirdParty": "Disable"
+    "$schema": "https://raw.githubusercontent.com/sumneko/vscode-lua/master/setting/schema.json",
+    "diagnostics.libraryFiles": "Disable",
+    "runtime.path": [
+        "lua/?.lua",
+        "lua/?/init.lua"
+    ],
+    "runtime.version": "LuaJIT",
+    "workspace.checkThirdParty": "Disable",
+    "workspace.library": [
+        "/github/workspace/deps/neodev.nvim/types/stable",
+        "${3rd}/busted/library",
+        "${3rd}/luassert/library"
+    ]
 }
